--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "easymde": "^2.18.0",
     "node-sass": "8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
