--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "easymde": "^2.18.0",
+    "electron-store": "^8.1.0",
     "node-sass": "8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
