--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "easymde": "^2.18.0",
     "electron-store": "^8.1.0",
     "node-sass": "8.0",
+    "qiniu": "^7.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
