--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "ele": "electron .",
+    "onlyEle": "nodemon --watch main.js --watch src/menuTemplate.js --exec \"electron .\"",
     "dev": "concurrently \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none npm start\""
   },
   "eslintConfig": {
@@ -57,6 +57,7 @@
     "cross-env": "^7.0.3",
     "electron": "^22.0.1",
     "electron-is-dev": "^2.0.0",
+    "nodemon": "^2.0.20",
     "wait-on": "^7.0.1"
   }
 }
